# owlet-dashboard

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml  release.yml
app/: analytics.py  auth_pages.py  auth_routes.py  auth_store.py  config.py  crypto.py  dashboard.py  main.py  models.py  night_page.py  notifications.py  now_page.py  owlet_client.py  oxygen_challenges.py  poller.py  pwa.py  quality.py  ratelimit.py  rhythms_page.py  security.py  shell.py  store.py
app/static/: insights.js  theme.css
desktop/: README.md  build-sidecar.ps1  server_entry.py
desktop/ci/: make_latest_json.py
desktop/src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/permissions/autogenerated/: show_native_toast.toml
desktop/src-tauri/src/: main.rs
desktop/src-tauri/ui-placeholder/: index.html
docs/: deployment.md
docs/superpowers/plans/: 2026-07-10-multi-user-public-app.md
docs/superpowers/specs/: 2026-07-10-multi-user-public-app-design.md  2026-07-12-ui-reimagining-design.md
scripts/: generate_icons.py
tests/: conftest.py  test_analytics.py  test_api.py  test_auth.py  test_auth_store.py  test_store.py  test_tenancy.py
