[project]
name = "owlet-dashboard"
version = "0.1.12"
description = "Local Owlet Dream Sock and Smart Sock history dashboard"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "aiosqlite>=0.20.0",
  "pyowletapi>=2025.4.10",
  "argon2-cffi>=23.1.0",
  "python-multipart>=0.0.9",
  # IANA timezone database for zoneinfo — absent from Windows and some
  # slim containers; the timezone preference validates against it.
  "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# tests import `tests.conftest`; bare `pytest` (CI) doesn't put the repo root
# on sys.path the way `python -m pytest` does
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
